--- a/trunk/SourceCode/Sicily.Robotix.Robots/Sicily.Robotix.Robots.csproj
+++ b/trunk/SourceCode/Sicily.Robotix.Robots/Sicily.Robotix.Robots.csproj
@@ -37,6 +37,7 @@
     <Reference Include="PresentationFramework">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="Sicily.Gps, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -57,6 +58,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arduino\GpsRobot.cs" />
+    <Compile Include="Arduino\GpsRobotUI.xaml.cs">
+      <DependentUpon>GpsRobotUI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Arduino\LEDCounter01.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,6 +70,16 @@
       <Project>{D497459A-6111-4CFB-8BD9-FE946DD07517}</Project>
       <Name>Sicily.Robotix.MicroController</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Libs\Sicily.Gps.dll" />
+    <Content Include="Libs\Sicily.Gps.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Arduino\GpsRobotUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Parallax\" />
